--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -32,13 +32,11 @@
           </div>
           <div class="CVheaderimage3">
           </div>
-          <div class="CVheaderimage4"><!--actually the 1st image repeated-->
-          </div>
         </div>
 
         <h1><hr>&nbsp;&nbsp;CLAIRVOYAGE&nbsp;&nbsp;<hr></h1>
         <span class="whitetext"> UX & UI (Sketch, Principle)&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#prototype">Peek at prototype →</a></span>
-        <p style="font-size:0.87em; opacity:0.7;"><i>The world is a smaller place thanks to technology — visualize <br>travel plans for faraway destinations and select accommodations with <br>confidence that they will make sense in the context of the itinerary</i></p>
+        <div class="headerdesc"><i>The world is a smaller place thanks to the internet — visualize travel plans for faraway destinations and select accommodations with confidence that they will make sense in the context of the itinerary</i></div>
 
 
       </div>
@@ -70,7 +68,7 @@
             <table class="personatable">
               <tr>
                 <td class="col1">
-                  <img src="source/Persona.svg" style="width:60%">
+                  <img src="source/persona.svg" style="width:60%">
                   <p class="bubbletext">MILLENNIAL<br>MARGO</p>
                 </td>
                 <td class="col2">
@@ -141,7 +139,7 @@
               </tr>
               <tr>
                 <td class="col1">Painpoints</td>
-                <td colspan=2><span class="bolder">Premature expectations</span> may be formed in absence of sufficient consideration of logistics, which often must be researched separately</td>
+                <td colspan=2><span class="bolder">Premature expectations</span> may be formed in the absence of sufficient consideration of logistics, which often must be researched separately</td>
                 <td colspan=3>Toggling between multiple sources (if one even remembers to) can be <span class="bolder">overwhelming</span>
                   <!--<br><br>Judgement calls have to be made regarding compromise of different criteria, but lack of visibility into the consequences of the decisions-->
                   <br><br><span class="bolder">Uncertainty</span> over the weight to assign to a stranger's opinions
@@ -269,7 +267,8 @@
               </tr>
             </table>
             <br><br><p> The analysis indicates that there is no lack of readily available information for trip planners</p>
-            <p>However, there is value is aggregating [information] from different sources to shift the user's focus to logistics, which would allow for more efficient and exhaustive research</p>
+            <p>However, there may be value in aggregating this information from different sources, allowing for more efficient and exhaustive research</p>
+            <p>If the research process itself becomes less painful, individuals may shift their focus to evaluating the logistics of their itinerary earlier in the planning process, potentially mitigating unpleasant surprises</p>
           </div>
         </div>
     </div>
@@ -280,7 +279,7 @@
         <div class="portfolioblock">
           <h3><hr>&nbsp;&nbsp;&nbsp;IDEATION&nbsp;&nbsp;&nbsp;<hr></h3><br>
           <i>How might we customize the accomodation selection process to allow for more informed decision making?</i><br>
-          <br>Sketches → Wireframes<br><br><br>
+          <br>Initial sketches were developed into the following wireframes<br><br><br>
 
           <div class="artifactcontainer">
             <div class="imagecontent">
@@ -325,7 +324,7 @@
               <h6>Itinerary Cart</h6>
               <p class="imagesubheader">Rank items in one's itinerary cart based on importance</p>
 
-              <p> Preferences as indicated in this step factor into how information is presented about potential hotels</p>
+              <p> Preferences as indicated in this step factor into how information is presented later on about potential hotels</p>
             </div>
           </div>
           <br>
@@ -356,7 +355,7 @@
               <h6>Map Filtration</h6>
               <p class="imagesubheader">Narrow down potential hotels by applying one's preferences</p>
               <p>Filtration is "live" - the number of hotel options updates every time the user edits criteria</p>
-              <p>After selection of preferences, users can “uncheck” one of the filters to easily see how options change if they compromise on a certain criteria</p>
+              <p>After selection of preferences, users can turn off any of the filters to easily see how options change if they compromise on a certain criteria</p>
             </div>
           </div>
           <br>
