--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
 
           <div class="proj 2">
               <div class="projthumbnail">
-                <img src="source/Sensual.png">
+                <a href="#"><img src="source/Sensual.png"></a>
               </div>
             <br>
               <div class="projthumbnailtext">
                 <h4> SENSUAL BEAUTY</h4>
+                <a href="#">
                 <h5>STEPPING OFF OF THE IMAGE CAROUSEL</h5>
                 <hr>
                 <h5> RETAIL WEBSITE</h5>
                 <h5 style="opacity:0.5;"><img src="source/Star.svg" style="height:1.4em; vertical-align:text-bottom;"><img src="source/Star.svg" style="height:0.9em;"> COMING SOON <img src="source/Star.svg" style="height:1em; vertical-align:text-bottom;"><img src="source/Star.svg" style="height:1.15em;"></h5>
+              </a>
               </div>  
           </div>
 
