--- a/habit.html
+++ b/habit.html
@@ -36,7 +36,7 @@
 
         <h1><hr>&nbsp;&nbsp;HABIT&nbsp;&nbsp;<hr></h1>
         <span class="whitetext"> (WORK IN PROGRESS)</span>
-        <div class="headerdesc"><i>Preferences being time-inconsistent, which may cause misalignment between intentions and ultimate actions, is a common pitfall in developing good habits
+        <div class="headerdesc"><i>One's time-inconsistent preferences cause misalignment between their intentions and ultimate actions and are a common pitfall in trying to develop good habits
 
         <br><br>The Habit app endeavors to help those in pursuit of self improvement help themselves by bringing behavioral research insights to productivity tools (to-do lists, timers, counters)</i></div>
 
