--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
               <p>I studied economics at Cornell and trained in digital and graphic design and UI / UX design at certificate programs at Parsons School of Design and Pratt Institute, respectively.</p>
               <br>
               <h6><a href="mailto:qhc2@cornell.edu">Send an email →</a></h6>
-              <br>
-              <h6><a href=#>View resume →</a></h6>
+              <!--<br>
+              <h6><a href=#>View resume →</a></h6>-->
        
           </div>
         </div>
