--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
           <div class="proj 2">
               <div class="projthumbnail">
-                <a href="#"><img src="source/Sensual.png"></a>
+                <a><img src="source/Sensual.png"></a>
               </div>
             <br>
               <div class="projthumbnailtext">
                 <h4> SENSUAL BEAUTY</h4>
-                <a href="#">
+                <a>
                 <h5>STEPPING OFF OF THE IMAGE CAROUSEL</h5>
                 <hr>
                 <h5> RETAIL WEBSITE</h5>
