--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>  
           </div>
 
-          <div class="proj 2">
+          <div class="proj 2" style="display:none;">
               <div class="projthumbnail">
                 <a><img src="source/Sensual.png"></a>
               </div>
@@ -90,8 +90,8 @@
               <p>I studied economics at Cornell and trained in digital and graphic design and UI / UX design at certificate programs at Parsons School of Design and Pratt Institute, respectively.</p>
               <br>
               <h6><a href="mailto:qhc2@cornell.edu">Send an email →</a></h6>
-              <!--<br>
-              <h6><a href=#>View resume →</a></h6>-->
+              <br>
+              <!--<h6><a href=#>View resume →</a></h6>-->
        
           </div>
         </div>
