--- a/carbon.html
+++ b/carbon.html
@@ -19,7 +19,7 @@
 				<p><li>The system will generate a unique QR code for the transaction</li></p>
 					<img src="source/Prototype1.gif" class="prototype">
 				<br><br>
-				<p><li>Buyer scans the code using their smartphone, either through a Carbon native app or through their camera app, if possible (e.g. on iOS 11 and later), which can link them directly to the native app</li></p>
+				<p><li>Buyer scans the code using their smartphone, either through a Carbon native app or through their camera app, if possible (e.g., on iOS 11 and later), which can link them directly to the native app</li></p>
 				<img src="source/Prototype2.gif" class="prototype">
 				</ol>
 			</li>
