--- a/carbon.html
+++ b/carbon.html
@@ -32,7 +32,7 @@
 				<p><li>Buyer enters their phone number so that the system can send a custom generated numerical code for the transaction</li></p>
 				<img src="source/Prototype3.gif" class="prototype">
 				<br><br>
-				<p><li>A code is texted to the phone number entered; the text message will also provide a link that the user can tap on to complete the transaction in the Carbon app</li></p>
+				<p><li>A code is texted to the phone number entered; the text message will also provide a link that the user can alternatively use to complete the transaction in the Carbon app</li></p>
 
 				<p><li>Buyer inputs the code that was texted to them; alternatively, the user could tap the link in the text to avoid having to manually type the code, which would make the transaction less error prone and more efficient</li></p>
 				<img src="source/Prototype4.gif" class="prototype">
