--- a/habit.html
+++ b/habit.html
@@ -35,7 +35,7 @@
         </div>
 
         <h1><hr>&nbsp;&nbsp;HABIT&nbsp;&nbsp;<hr></h1>
-        <span class="whitetext"> (WORK IN PROGRESS)</span>
+        <span class="whitetext"> UX & UI (Sketch, Principle)&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#prototype">Peek at prototype →</a></span>
         <div class="headerdesc"><i>The Habit app endeavors to help those in pursuit of self improvement help themselves by bringing behavioral research insights to productivity tools (to-do lists, timers, counters)</i></div>
 
 
@@ -125,7 +125,7 @@
                 <img src="source/HBWireframe1.png" alt="wireframe" class="wireframes">
             </div>
             <div class="imagedesc">
-              <h6>Daily Survey</h6>
+              <h6>Daily Survey / Diary</h6>
               <p class="imagesubheader">View and keep track of progress towards one's goals for the day on the homescreen</p>
 
               <p>For convenience, productivity tools (counter and timer) are all usable on this one screen</p>
@@ -177,12 +177,34 @@
               <p>If the goal is one of the suggested habits, the user may also benchmark their progress relative to others'</p>
             </div>
           </div>
-          <br>
+          <br>    
+        </div>
+<br><br>
 
+        <div class="portfolioblock">    
+          <h3 id="prototype"><hr>&nbsp;&nbsp;PROTOTYPE&nbsp;&nbsp;<hr></h3>
+          <br>
+          <div class="artifactcontainer">    
+            <div class="protodesc">
+              <h6>Progress Diary</h6>
+                <p>The home screen serves as a daily agenda where the user can review and record progress towards goals</p>
+                <p>Functional timers, counters and checklists in one place encourages progress tracking</p>
+            </div>
+            <p> <video autoplay muted loop playsinline width="375" src="source/HB Proto I.mp4"></p>
+          </div>
+
+          <br>
+          <div class="artifactcontainer">    
+            <div class="protodesc">
+              <h6>Setting Goals</h6>
+                <p>Easily add a goal to one's agenda by selecting from a list of potential healthy habits and customizing as desired</p>
+                <p>If enough users are pursuing the same suggested goals, progress relative to the average habit builder can be displayed as a source of motivation</p>
+
+            </div>
+            <p> <video autoplay muted loop playsinline width="375" src="source/HB Proto II.mp4"></p>
+          </div>
 
         </div>
-
-
 
 
         <footer>&copy; JUDY CHAN 2019<br>QHC2@CORNELL.EDU</footer>
