--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="overlaytext">
               <br>
               <h4>I'm Judy, a digital designer based in New York City.</h4>
-              <p>As a behavioral economics enthusiast, I started my career in compensation consulting. I am currently looking for internships/junior UI/UX or product design roles.</p>
+              <p>As a behavioral economics enthusiast, I started my career in compensation consulting. I am currently looking for UI/UX or product design roles.</p>
               <p>I studied economics at Cornell and trained in digital and graphic design and UI / UX design at certificate programs at Parsons School of Design and Pratt Institute, respectively.</p>
               <br>
               <h6><a href="mailto:qhc2@cornell.edu">Send an email →</a></h6>
