--- a/clairvoyage.html
+++ b/clairvoyage.html
@@ -176,7 +176,7 @@
                 <th>Lonely Planet</th>
               </tr>
               <tr>
-                <td colspan=6 class="col1"><p>Mapping of Multiple Locations</p></td>
+                <td colspan=6 class="col1"><p>Map of Multiple Locations</p></td>
               </tr>
               <tr class="xrow">
                 <td class="col1">&nbsp;&nbsp;&nbsp;Hotels</td>
@@ -198,7 +198,7 @@
                 <td colspan=6 class="col1"><p>Identifying Neighborhoods</p></td>
               </tr>
               <tr class="xrow">
-                <td class="col1">&nbsp;&nbsp;Search by Neighborhood</td>
+                <td class="col1">&nbsp;&nbsp;Search Neighborhoods</td>
                 <td>×</td> 
                 <td>×</td>
                 <td></td>
@@ -278,8 +278,8 @@
 
         <div class="portfolioblock">
           <h3><hr>&nbsp;&nbsp;&nbsp;IDEATION&nbsp;&nbsp;&nbsp;<hr></h3><br>
-          <i>How might we customize the accomodation selection process to allow for more informed decision making?</i><br>
-          <br>Initial sketches were developed into the following wireframes<br><br><br>
+          <p><i>How might we customize the accomodation selection process to allow for more informed decision making?</i></p>
+          <p>Initial sketches were developed into the following wireframes</p><br><br>
 
           <div class="artifactcontainer">
             <div class="imagecontent">
