--- a/habit.html
+++ b/habit.html
@@ -80,7 +80,7 @@
               </tr>
               <!--<tr>
                 <td class="col1">Research Insights</td>
-                <td>Habit are triggered by cues and require repetition to develop<br><br>Absent strong <span class="bolder">prospective memory</span> (ability to remember previously formed intentions), outside reminders effectively promote behavior repetition</td>
+                <td>Habits are triggered by cues and require repetition to develop<br><br>Absent strong <span class="bolder">prospective memory</span> (ability to remember previously formed intentions), outside reminders effectively promote behavior repetition</td>
                 <td>People place a <span class="bolder">discount</span> on future behavior</td>
                 <td>Salience of reminders to engage in desired behaviors decays over time</td>
               </tr>-->
