--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                   <h5>PLANNING FARAWAY TRIPS WITH CLARITY</h5>
                   <hr>
                   <h5>TRAVEL MOBILE APP </h5>
+                  <h5 style="opacity:0.5;"><img src="source/Star.svg" style="height:1em; vertical-align:text-bottom;"><img src="source/Star.svg" style="height:1.3em;"> ACADEMIC PROJECT <img src="source/Star.svg" style="height:1.3em; vertical-align:text-bottom;"><img src="source/Star.svg" style="height:1.1em;"></h5>
                   </a>
                 </div>  
           </div>
@@ -71,7 +72,7 @@
                   <h5>BRIDGING THE INTENTION-ACTION GAP</h5>
                   <hr>
                   <h5>PRODUCTIVITY MOBILE APP</h5>
-                  <h5 style="opacity:0.5;"><img src="source/Star.svg" style="height:1em; vertical-align:text-bottom;"><img src="source/Star.svg" style="height:1.3em;"> WORK IN PROGRESS <img src="source/Star.svg" style="height:1.3em; vertical-align:text-bottom;"><img src="source/Star.svg" style="height:1.1em;"></h5>
+                  <h5 style="opacity:0.5;"><img src="source/Star.svg" style="height:1em; vertical-align:text-bottom;"><img src="source/Star.svg" style="height:1.3em;"> PERSONAL PROJECT <img src="source/Star.svg" style="height:1.3em; vertical-align:text-bottom;"><img src="source/Star.svg" style="height:1.1em;"></h5>
                 </a>
               </div>
           </div>
@@ -86,7 +87,7 @@
           <div class="overlaytext">
               <br>
               <h4>I'm Judy, a digital designer based in New York City.</h4>
-              <p>As a behavioral economics enthusiast, I started my career in compensation consulting. I am currently looking for UI/UX or product design roles.</p>
+              <p>As a behavioral economics enthusiast, I started my career in compensation consulting. I am currently looking for internships/junior UI/UX or product design roles.</p>
               <p>I studied economics at Cornell and trained in digital and graphic design and UI / UX design at certificate programs at Parsons School of Design and Pratt Institute, respectively.</p>
               <br>
               <h6><a href="mailto:qhc2@cornell.edu">Send an email →</a></h6>
