--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="headerright">
         <a href="#projects">PROJECTS</a>
         <div class="headerdesigner">&nbsp;&nbsp;&nbsp;&nbsp;</div>&nbsp;&nbsp;
-        <a href="#about">ABOUT</a>
+        <a href="mailto:judy@judychan.design">CONTACT</a>
     </div>
   </header>
 
