--- a/HC_test.html
+++ b/HC_test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title> HC | Homepage Animation Test</title>
-  <link rel="stylesheet" type="text/css" href="style2.css">
+  <link rel="stylesheet" type="text/css" href="source2/style2.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" >
 </head>
 
