--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Judy Chan | Designer </title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/vae6gkc.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Questrial&display=swap">
   <link rel="icon" href="source/favicon.ico">
+
 </head>
 
 <body>
@@ -16,9 +18,10 @@
       <img src="source/home_logo.svg">
     </div>
     <div class="headerright">
-        <a href="#projects">Work</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#about">About me</a>
+        <div class="nav-links-container">
+          <a href="#projects">Work</a>
+          <a href="#about">About me</a>
+        </div>
     </div>
   </header>
 
@@ -50,10 +53,9 @@
 
         <div class="entries-block-B">
            <div class="desktop-wrapper entries-img home-wrapper">
-              <img src="source/MF_hero_img2.jpg" class="MF_hero">
-              <img src="source/MF_hero_img1.jpg" class="desktop-fade MF_hero">
+                <img src="source/MF_hero_img2.jpg" class="MF_hero">
+                <img src="source/MF_hero_img1.jpg" class="desktop-fade MF_hero">
             </div>
-            <!--<img src="source/test2.jpg" class="entries-img">-->
 
             <div class="entries-text">
               <p class="eyebrow">Interaction, UI, Visual, Web design</p>
