--- a/mayfair.html
+++ b/mayfair.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Judy Chan | Designer </title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/vae6gkc.css">
@@ -16,9 +17,10 @@
       <a href="index.html"><img src="source/home_logo.svg"></a>
     </div>
     <div class="headerright">
-        <a href="index.html#projects">Work</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#about">About me</a>
+        <div class="nav-links-container">
+          <a href="index.html#projects">Work</a>
+          <a href="#about">About me</a>
+        </div>
     </div>
   </header>
 
@@ -115,7 +117,7 @@
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <video autoplay muted loop playsinline width="700" src="source/MF_animation_1.mp4" id="MF_animation_1">
+        <video autoplay muted loop playsinline src="source/MF_animation_1.mp4" id="MF_animation_1">
         </div>
         <h3> Scrollspy (Automatically Updating Navigation)</h3>
         <p><u>Findability</u>:&nbsp;&nbsp;Provides users with a top-level view of all content and also maps the user's current position on the page. </em></p>
@@ -124,7 +126,7 @@
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <video autoplay muted loop playsinline height="400" src="source/MF_animation_2.mp4" id="MF_animation_2">
+        <video autoplay muted loop playsinline src="source/MF_animation_2.mp4" id="MF_animation_2">
         </div>
         <h3> Collapsible Modules on Mobile</h3>
         <p>Mobile view utilizes expandable modules (collapsed by default) to mitigate the need for excessive scrolling on lengthy or text-heavy pages</p>
@@ -133,7 +135,7 @@
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <video autoplay muted loop playsinline width="700" src="source/MF_animation_3.mp4" id="MF_animation_3">
+        <video autoplay muted loop playsinline src="source/MF_animation_3.mp4" id="MF_animation_3">
         </div>
         <h3> Timing on Dropdown Animations</h3>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut augue rutrum, lobortis mi sit amet, semper sem.
@@ -141,7 +143,7 @@
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <!--<video autoplay muted loop playsinline width="700" src="source/MF_animation_3.mp4" id="MF_animation_3">-->
+        <!--<video autoplay muted loop playsinline src="source/MF_animation_3.mp4" id="MF_animation_4">-->
         </div>
         <h3> Accessible Use of MF Gold (<span style="color:#FFCC66; font-size:1.2em; -webkit-text-stroke:0.9px; -webkit-text-stroke-color:black;">●</span> #FFCC66)</h3>
         <p>Although it exists in an otherwise grayscale palette, Mayfair's gold color was used thoughtfully and avoided in instances where its [contrast score], which does not meet accessibility standards would potentially compromise usability (e.g., not used as a link signifiers).</p>
@@ -159,7 +161,7 @@
   </div>-->
 
 
-    <div class="full-width-content diff-bg-color">
+  <div class="full-width-content diff-bg-color">
     <div class="entries-block-A">
 
         <div class="desktop-wrapper mockup">
@@ -206,12 +208,12 @@
 
     <div class="full-width-content diff-bg-color">
     <div class="entries-block-A">
-      <div class="desktop-wrapper">
-        <img src="source/MF_mock_aboutus.jpg" class="mockup">
+      <div class="desktop-wrapper mockup">
+        <img src="source/MF_mock_aboutus.jpg">
       </div>
         
-      <div class="desktop-wrapper">
-        <img src="source/MF_mock_ventures.jpg" class="mockup">
+      <div class="desktop-wrapper mockup">
+        <img src="source/MF_mock_ventures.jpg">
       </div>
     
     </div>
