--- a/abbot.html
+++ b/abbot.html
@@ -96,11 +96,7 @@
     <h2>Interaction Design</h2>
     Abbot Society's website importantly wanted to establish a password-protected library dedicated to whisky tasting notes, financial information and news. In determining how all of this information would be laid out and interact with one another, the team considered multiple ways to organize information.
 
-    <p>We needed to balance information architecture, organization, engagement. Focus on user journeys.
-
-    <p>In terms of user journey / navigation, we wanted users to be able to seamlessly explore and play.
-
-    <p>Goal is to design in a way that contributes as much as it can to (1) readership, (2) sense of exclusive community (idk if this is something that's more visual), (3) get people engaged and excited (gamification???) about whisky</p>
+    <p>We needed to balance information architecture, organization, engagement while focusing on user journeys.
   </div>
 
 
