--- a/mayfair.html
+++ b/mayfair.html
@@ -105,7 +105,7 @@
     <h2> Interaction Design</h2>
     A corporate website communicates various types of information upon which the investing community relies to make decisions. 
 
-    <p>With interests ranging from regulatory financial filings to corporate responsibility, the investor user would benefit from design considerations meant to improve findability and discoverability of such information, including a frictionless experience even when performing investment research on mobile.
+    <p>With interests ranging from regulatory financial filings to corporate responsibility disclosure, the investor user would benefit from design considerations meant to improve findability and discoverability of such information and to ensure more comfortable reading and navigation experiences - including when performing investment research on mobile.
 
   </div>
 
@@ -138,7 +138,7 @@
         <video autoplay muted loop playsinline src="source/MF_animation_3.mp4" id="MF_animation_3">
         </div>
         <h3> Timing on Dropdown Animations</h3>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut augue rutrum, lobortis mi sit amet, semper sem.
+        For dropdowns displayed on hover, a slight delay is included before the menu shows to ascertain that the user meant to hover and would not be subject to dropdowns flickering open and closed as the user runs their mouse over the navigation while scanning.
       </div>
 
       <div class="ux-block">
@@ -146,7 +146,7 @@
         <!--<video autoplay muted loop playsinline src="source/MF_animation_3.mp4" id="MF_animation_4">-->
         </div>
         <h3> Accessible Use of MF Gold (<span style="color:#FFCC66; font-size:1.2em; -webkit-text-stroke:0.9px; -webkit-text-stroke-color:black;">●</span> #FFCC66)</h3>
-        <p>Although it exists in an otherwise grayscale palette, Mayfair's gold color was used thoughtfully and avoided in instances where its [contrast score], which does not meet accessibility standards would potentially compromise usability (e.g., not used as a link signifiers).</p>
+        <p>Although it exists in an otherwise grayscale palette, Mayfair's gold color was used thoughtfully and avoided in instances where it would not meet accessibility standards and would thus potentially compromise usability (e.g., not used to denote links).</p>
       </div>
 
     </div>
@@ -155,9 +155,6 @@
 
   <!--<div class="textcontent">
     <h2>Conclusion</h2>
-        The resulting website [verb]s simplicity and readability. It is expected that the page types/templates designed will be able to accommodate additional pages and/or information as the company matures. [learnability of templates]
-
-        <p>Furthermore, it is anticipated that after the site launches, we will be able to draw insights from site analytics on the appropriateness of the navigational structure of the MVP, which was informed by where users might expect to find certain information if they are frequent visitors of corporate websites in general (i.e., informed by our comparative audit)</p>
   </div>-->
 
 
