--- a/mayfair.html
+++ b/mayfair.html
@@ -79,7 +79,7 @@
       <div class="entries-text">
       <h3>Typography</h3>
         Inter is used as the site’s primary typeface given its legibility thanks to its tall x-height.
-        <p>Oswald is used predominantly for headlines, where its robust weight reinforces hierarchy and its condensed width [optimizes horizontal space efficiency.]</p>
+        <p>Oswald is used predominantly for headlines, where its robust weight reinforces hierarchy and its condensed width utilizes horizontal space efficiently.</p>
       </div>
       <img src="source/MF_visual_type.svg" class="identity-img">
     </div>
