--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/vae6gkc.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Questrial&display=swap">
-  <link rel="icon" href="source/favicon.ico">
+  <link rel="icon" href="source/Favicon.ico">
 
 </head>
 
