--- a/abbot.html
+++ b/abbot.html
@@ -122,15 +122,15 @@
         <video autoplay muted loop playsinline width="500" src="source/AB_animation_2.mp4" id="AB_animation_2">
         </div>
         <h3> Global Navigation</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut augue rutrum, lobortis mi sit amet, semper sem.</p>
-      </div>
+        <p>The whisky distillery "shelf" is an illustrated navigation that is present on multiple pages to encourage continued browsing after the user is done reading a specific piece of content</p>
+      </div><!--***-->
 
       <div class="ux-block">
         <div class="video-wrapper">
         <video autoplay muted loop playsinline width="500" src="source/AB_animation_3.mp4" id="AB_animation_3">
         </div>
         <h3> Driving exploration and engagement</h3>
-        <p> Present a feed of all sorts of content that users can browse through, avoiding the need to immediately decide what distillery or type of content they're looking for. [Mention gamification?]</p>
+        <p> Present a feed of all sorts of content that users can browse through, avoiding the need to immediately decide what distillery or type of content they're looking for.</p><!--***-->
       </div>
 
       <div class="ux-block">
