--- a/abbot.html
+++ b/abbot.html
@@ -94,13 +94,10 @@
 
   <div class="textcontent">
     <h2>Interaction Design</h2>
-    Abbot Society's website importantly wanted to establish a password-protected library dedicated to whisky tasting notes, financial information and news. In determining how all of this information would be laid out and interact with one another, the team considered multiple ways to organize information.
+    Abbot Society especially wanted to establish a password-protected library dedicated to whisky tasting notes, financial information and news to be included on their website. 
 
-    <p>We needed to balance information architecture, organization, engagement. Focus on user journeys.
+    <p>In determining how all of this information would be laid out and interact with one another, the team considered multiple ways to organize information. Across the entire user journey from logging in to reading a specific tasting note, the layout needed to balance information architecture and organization while remaining engaging and encouraging exploration.
 
-    <p>In terms of user journey / navigation, we wanted users to be able to seamlessly explore and play.
-
-    <p>Goal is to design in a way that contributes as much as it can to (1) readership, (2) sense of exclusive community (idk if this is something that's more visual), (3) get people engaged and excited (gamification???) about whisky</p>
   </div>
 
 
@@ -111,34 +108,34 @@
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <video autoplay muted loop playsinline width="500" src="source/AB_animation_1.mp4" id="AB_animation_1">
+        <video autoplay muted loop playsinline src="source/AB_animation_1.mp4" id="AB_animation_1">
         </div>
-        <h3> Incentivizing Paywall</h3>
-        <p>Must justify the interaction cost (i.e., having to log in) ...Try to reduce the friction of having to log in - must balance privacy and engagement</p>
+        <h3> Incentivizing logging in</h3>
+        <p> Recognizing that having to log in has an interaction cost (content is for members only), we communicate the value proposition of doing so by showing intriguing previews of the types of content available.</p>
       </div>
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <video autoplay muted loop playsinline width="500" src="source/AB_animation_2.mp4" id="AB_animation_2">
+        <video autoplay muted loop playsinline src="source/AB_animation_2.mp4" id="AB_animation_2">
         </div>
-        <h3> Global Navigation</h3>
-        <p>The whisky distillery "shelf" is an illustrated navigation that is present on multiple pages to encourage continued browsing after the user is done reading a specific piece of content</p>
+        <h3> Global navigation</h3>
+        <p>The whisky distillery "shelf" is an illustrated navigation that is present on multiple pages, making it easier to dive back to browsing and exploring after the user is done reading a specific piece of content.</p>
       </div><!--***-->
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <video autoplay muted loop playsinline width="500" src="source/AB_animation_3.mp4" id="AB_animation_3">
+        <video autoplay muted loop playsinline src="source/AB_animation_3.mp4" id="AB_animation_3">
         </div>
         <h3> Driving exploration and engagement</h3>
-        <p> Present a feed of all sorts of content that users can browse through, avoiding the need to immediately decide what distillery or type of content they're looking for.</p><!--***-->
+        <p> The landing page upon logging in presents a feed of recent posts for preliminarily browsing, relieving pressure on users to immediately decide what distillery or type of content they're looking for.</p><!--***-->
       </div>
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <video autoplay muted loop playsinline width="600" src="source/AB_animation_4.mp4" id="AB_animation_4">-->
+        <video autoplay muted loop playsinline src="source/AB_animation_4.mp4" id="AB_animation_4">-->
         </div>
         <h3> Information Architecture / Filtering</h3>
-        <p>To convey and [deliver] ease of use, include ways to filter whisky notes in anticipation of the large number that each distillery page may ultimately have.</p>
+        <p>In anticipation of a growing catalog of content, ways to filter a potentially large number of whisky notes are included. Tags on posts also allows the user to easily explore more content in a certain category.</p>
       </div>
 
     </div>
