--- a/mayfair.html
+++ b/mayfair.html
@@ -129,8 +129,8 @@
         <video autoplay muted loop playsinline src="source/MF_animation_2.mp4" id="MF_animation_2">
         </div>
         <h3> Collapsible Modules on Mobile</h3>
-        <p>Mobile view utilizes expandable modules (collapsed by default) to mitigate the need for excessive scrolling on lengthy or text-heavy pages</p>
-        <p><u>Findability</u>:&nbsp;&nbsp;Collapsed modules serve as a table of contents that allows for quick scanning of the page</p>
+        <p>Mobile view utilizes expandable modules (collapsed by default) to mitigate the need for excessive scrolling on lengthy or text-heavy pages.</p>
+        <p><u>Findability</u>:&nbsp;&nbsp;Collapsed modules serve as a table of contents that allows for quick scanning of the page.</p>
       </div>
 
       <div class="ux-block">
