--- a/mayfair.html
+++ b/mayfair.html
@@ -143,7 +143,11 @@
 
       <div class="ux-block">
         <div class="video-wrapper">
-        <!--<video autoplay muted loop playsinline src="source/MF_animation_3.mp4" id="MF_animation_4">-->
+        <div class="desktop-wrapper" id="MF4-wrapper">
+          <img src="source/MF_animation_4b.png" id="MF_animation_4b">
+          <img src="source/MF_animation_4a.png" class="desktop-fade" id="MF_animation_4a">
+        </div>
+        <!--<video autoplay muted loop playsinline src="source/MF_animation_4.mp4" id="MF_animation_4">-->
         </div>
         <h3> Accessible Use of MF Gold (<span style="color:#FFCC66; font-size:1.2em; -webkit-text-stroke:0.9px; -webkit-text-stroke-color:black;">●</span> #FFCC66)</h3>
         <p>Although it exists in an otherwise grayscale palette, Mayfair's gold color was used thoughtfully and avoided in instances where it would not meet accessibility standards and would thus potentially compromise usability (e.g., not used to denote links).</p>
