--- a/index.html
+++ b/index.html
@@ -38,13 +38,18 @@
       <h1 id="projects">Selected Projects —</h1>
 
         <div class="entries-block-A">
-          <div class="home-wrapper entries-img">
-            <img src="source/AB_hero_img.jpg" id="AB_hero">
-          </div>
+          <a href="abbot.html" class="no-link-style">
+            <div class="home-wrapper entries-img">
+              <img src="source/AB_hero_img.jpg" id="AB_hero">
+              <div class="overlay-container">
+                <img src="source/AB_logo.png">  
+              </div>
+            </div>
+          </a>
 
           <div class="entries-text">  
             <p class="eyebrow">Interaction, UI, Visual, Web design</p>
-            <h2>Abbot Society</h2>
+            <h2><a href="abbot.html" class="no-link-style">Abbot Society</a></h2>
             Designing an online touchpoint for an exclusive global community of whisky enthusiasts.
             <p><br><a href="abbot.html">View details ⟶</a>
           </div> <!--Closes text box-->  
@@ -52,14 +57,23 @@
         </div>
 
         <div class="entries-block-B">
-           <div class="desktop-wrapper entries-img home-wrapper">
+           <a href="mayfair.html" class="no-link-style">
+            <div class="home-wrapper">
+              <div class="MF-hero-wrapper desktop-wrapper entries-img">
                 <img src="source/MF_hero_img2.jpg" class="MF_hero">
                 <img src="source/MF_hero_img1.jpg" class="desktop-fade MF_hero">
-            </div>
+              </div>
+
+                <div class="overlay-container">
+                  <img src="source/MF_logo.png">
+                </div>
+
+
+            </div></a>
 
             <div class="entries-text">
               <p class="eyebrow">Interaction, UI, Visual, Web design</p>
-              <h2>Mayfair Gold</h2>
+              <h2><a href="mayfair.html" class="no-link-style">Mayfair Gold</a></h2>
               Designing Mayfair's corporate website to be an investor communication tool for the soon-to-be public mineral exploration company. 
               <p><br><a href="mayfair.html">View details ⟶</a>
             </div>
@@ -92,9 +106,9 @@
       <h3>judy@judychan.design</h3>
       <a href="mailto:judy@judychan.design">Email me ⟶</a>
 
-      <br><br><br>
+      <!--<br><br><br>
       <h3>linkedin.com/in/qjudychan</h3>
-      <a href="https://www.linkedin.com/in/qjudychan/" target="blank">Connect with me ⟶</a>
+      <a href="https://www.linkedin.com/in/qjudychan/" target="blank">Connect with me ⟶</a>-->
       </div>
 
 
