--- a/mayfair.html
+++ b/mayfair.html
@@ -231,9 +231,9 @@
       <h3>judy@judychan.design</h3>
       <a href="mailto:judy@judychan.design">Email me ⟶</a>
 
-      <br><br><br>
+      <!--<br><br><br>
       <h3>linkedin.com/in/qjudychan</h3>
-      <a href="https://www.linkedin.com/in/qjudychan/" target="blank">Connect with me ⟶</a>
+      <a href="https://www.linkedin.com/in/qjudychan/" target="blank">Connect with me ⟶</a>-->
       </div>
 
 
