--- a/abbot.html
+++ b/abbot.html
@@ -135,7 +135,7 @@
         <video autoplay muted loop playsinline src="source/AB_animation_4.mp4" id="AB_animation_4">-->
         </div>
         <h3> Information Architecture / Filtering</h3>
-        <p>In anticipation of a growing catalog of content, ways to filter a potentially large number of whisky notes are included. Tags on posts also allows the user to easily explore more content in a certain category.</p>
+        <p>In anticipation of a growing catalog of content, ways to filter a potentially large number of whisky notes are included. Tags on posts also allow the user to easily explore more content in a certain category.</p>
       </div>
 
     </div>
